实战:萨摩耶“猎豹”的第一篇成长日记

--- a/samoye/demo1.html
+++ b/samoye/demo1.html
@@ -2,8 +2,13 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>实战：萨摩耶“猎豹”的第一篇成长日记</title>
+		<title>实战:萨摩耶“猎豹”的第一篇成长日记</title>
 	</head>
 	<body>
+		<h1>猎豹的成长日记</h1>
+		<p>我叫猎豹,我是一只萨摩耶。</p>
+		<h2>2023年2月8日</h2>
+		<p><img src="images/dog.jpg" alt=""></p>
+		<p>我今天满月啦!主人带我到公园里散步,我好喜欢这里的青草地.</p>
 	</body>
 </html>
