--- a/cssSprite/index.html
+++ b/cssSprite/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>学习CSS Sprite雪碧图</title>
+		<title>学习CSS Sprite雪碧图应用</title>
 		<style>
 		*{
 			margin: 0;
