--- a/JavaScript/jsStart/1-1-1.html
+++ b/JavaScript/jsStart/1-1-1.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>学前练习</title>
+		<title>JavaScript学前练习</title>
 	</head>
 	<body>
 		<p id="p1">我是第一段文字</p>
