找到你的位置（JS在页面中的位置）

--- a/JavaScript/jsStart/1-4.html
+++ b/JavaScript/jsStart/1-4.html
@@ -12,5 +12,11 @@
 		<p>JavaScript代码在网页读取到该语句的时候就会执行。</p>
 		<hr>
 		<p>注意: javascript作为一种脚本语言可以放在html页面中任何位置，但是浏览器解释html时是按先后顺序的，所以前面的script就先被执行。比如进行页面显示初始化的js必须放在head里面，因为初始化都要求提前进行（如给页面body设置css等）；而如果是通过事件调用执行的function那么对位置没什么要求的。</p>
+		<!-- 演示代码 -->
+		<pre>
+		&lt;script type="text/javascript"&gt;
+		document.write("javascript");
+		&lt;/script&gt;
+		</pre>
 	</body>
 </html>
